Fixed scroll on mobile device, fixed scroll for arrow keys on small screens

--- a/style.css
+++ b/style.css
@@ -112,6 +112,10 @@ body {
     font-size: 4.5rem;
 }
 
+.main {
+    min-width: 100vw;
+}
+
 .game__body {
     width: 30rem;
     height: 30rem;
